2002-05-09  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.glade : long forgotten atk patch from Dave.
	  Sorry.

2002-04-22  Rachel Hestilow  <hestilow@ximian.com>

	* gnome-keyboard-properties.glade: Restore missing OptionMenu
	labels.
	
Thu Apr 18 13:59:12 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-keyboard-properties.glade: cleanups.

	* gnome-keyboard-properties.c: remove accessibility pane and add a
	button.

Wed Apr 10 18:06:25 2002  Jonathan Blandford  <jrb@gnome.org>

	* keyboard.desktop.in (Exec): s/gnome2/gnome

2002-03-29  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.glade : click_volume range is 0..100

2002-03-26  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-keyboard-properties.c (bell_to_widget): Be nice on
	invalid and NULL Gconf values

2002-03-25  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.c (volume_to_widget) : new.
	(volume_from_widget) : new.
	(setup_dialog) : use them here.

2002-03-25  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.c (setup_accessibility) : Use
	  gtk_label_new_with_mnemonic and add an accel to the label.

2002-03-19  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.c (_to_widget) : fix signature.
	(*_from_widget) : fix signature.

2002-03-13  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.c (setup_accessibility) : new.
	(main) : install the accessibility page.

2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* gnome-keyboard-properties.c (bell_enums): Swap around. This
	was initially reversed because of a bug in gconf-peditor.
	Ideally this code should use the new enum functions, but
	the existing stuff works so I so no immediate need to rewrite
	it.
	(*_to/from_widget): Convert to new signature.
	
2002-03-19  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-keyboard-properties.c (bell_to_widget): Check that
	value actually is string - that fixes crash with broken schemas

2002-03-10  Seth Nickell  <snickell@stanford.edu>