@@ -1,5 +1,10 @@
 2002-05-09  Jody Goldberg <jody@gnome.org>
 
+	* gnome-keyboard-properties.c (dialog_response) : support help.
+	* gnome-keyboard-properties.glade : add help.
+
+2002-05-09  Jody Goldberg <jody@gnome.org>
+
 	* gnome-keyboard-properties.glade : long forgotten atk patch from Dave.
 	  Sorry.
 
